# Epstein_Rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
dashboard_backend/: Dockerfile  config.py  db.py  main.py  models.py  requirements.txt  schemas.py
dashboard_backend/api/: health.py  jobs.py  queries.py  search.py  websocket.py
dashboard_frontend/: Dockerfile  index.html  package-lock.json  package.json
dashboard_frontend/src/: App.tsx  index.css
dashboard_frontend/src/components/: ActiveJobsList.tsx  ErrorBoundary.tsx  JobProgressCard.tsx  Layout.tsx  LiveActivityChart.tsx  PopularQueries.tsx  QueryDetailModal.tsx  QueryTrendsChart.tsx  RecentQueriesList.tsx  ResponseTimeChart.tsx  StatCard.tsx  SystemHealth.tsx
dashboard_frontend/src/lib/: api.ts  utils.ts  websocket.ts
dashboard_frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Jobs.tsx  Queries.tsx  Search.tsx  Settings.tsx
docs/: AGENT_TEAM_MCP_DASHBOARD.md  ARCHITECTURE_MCP_DASHBOARD.md  DASHBOARD_UI_MOCKUPS.md  DEMO.md  DEPLOYMENT.md
mcp_server/: .dockerignore  Dockerfile  __init__.py  __main__.py  config.py  logging_utils.py  models.py  rag_engine.py  requirements.txt  server.py
services/: Dockerfile  __init__.py  data_prep.py  dataset_downloader.py  document_processor.py  pipeline.py  requirements.txt  utils.py
tests/: __init__.py  conftest.py  test_dashboard_api.py  test_data_pipeline.py  test_mcp_server.py
